--- a/Design/pages/Home.html
+++ b/Design/pages/Home.html
@@ -17,101 +17,190 @@
 </head>
 
 <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <span class="navbar-brand mb-0 h1 "><span style="color: #de1700; font-size: 2rem;"><b>U</b></span>fit.</span>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-            <div class="collapse navbar-collapse" id="navbarText">
-                <div class="row w-100">
-                    <div class="col-md-10  ">
-                        <ul class="navbar-nav">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Features</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Testimonials</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Contact Us</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-link" href="#">Login</a>
-                            </li>
-                            <li class="nav-item float-right">
-                                <a class="nav-link" href="#">Sign Up</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-md-2">
-                        <li class="fa fa-bell fa-2x nav-icon"></li>
-                        <li class="fa fa-user fa-2x ml-3 nav-icon"></li>
-                    </div>
+    <div class="container">
+        <div class="row  w-10 ">
+            <div class="col-md-6 col-sm-6">
+                <h3>INTAKE SUMMARY</h1>
+                    <table class="table table-bordered">
+                        <tr class="table-active">
+                            <th>
+                                <h5>Today Target</h5>
+                            </th>
+                            <th> </th>
+                        </tr>
+                        <tr>
+                            <td>Food</td>
+                            <td> 255</td>
+                        </tr>
+                        <tr>
+                            <td>Exercise</td>
+                            <td> 255</td>
+                        </tr>
+                        <tr>
+                            <td>Net</td>
+                            <td> 255</td>
+                        </tr>
+                        <tr>
+                            <td>over</td>
+                            <td> 255</td>
+                        </tr>
 
-                </div>
-                </span>
+                        <tr>
+                            <td>BMI</td>
+                            <td> 125.5lb</td>
+                        </tr>
             </div>
-    </nav>
-    <section id="banner" style="background:url(file:///C:/Users/f3student18/Downloads/body-clouds-cloudy-skies-460524.jpg);;background-repeat:no-repeat;background-size: cover;background-position: center">
-        <div style="background-color: rgba(0, 0, 0, 0);">
-            <div class="container">
-                <div class="row align-items-center " style="min-height: 100vh;">
-                    <div class="col-6 p-3">
-                        <h1 class="mb-0" style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-weight: 800; font-size: 4rem"><span style="color: #de1700;font-size: 10rem;">U</span>fit.</h1>
-                        <hr class="">
-                        <p class="text-white text-justify pb-0" style="font-size: 1rem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae odio officiis blanditiis in excepturi! Deserunt voluptas odio eum ullam, dolore culpa error consequuntur placeat aut sequi non modi earum facere?</p>
-                        <a href="" class="btn btn-block text-white" style="background-color: #de1700;">Let's start</a>
-                    </div>
-
-                </div>
-            </div>
+            </table>
         </div>
+        <div class="row  align-items-star">
+            <div class="col-md-6  col-sm-6">
+                <h1 class=text-left> TODAY INTAKE</h1>
+                <div class="container">
+                    <h6>BREAK FAST</h6>
 
-    </section>
-    <footer class="bg-dark text-white">
-        <div class="container">
-            <div class="pt-3">
-                <img src="https://via.placeholder.com/140x100" width="50" height="50" class="img-responsive" />
-            </div>
-            <div class='row pt-4'>
-                <div class="col-lg-6 ">
+                    <table class="table table-bordered">
+                        <tr class="table-active">
 
-                    <div class="footer-item">
-                        <li class="fas fa-envelope"></li><span>email@email.com</span>
-                    </div>
-                    <div class="footer-item">
-                        <li class="fas fa-phone"></li><span>+92-12345678-0</span>
-                    </div>
+                            <th>Food</th>
+                            <th>Calories</th>
+                            <th>serving</th>
+                            <th class=text-center>Delete </th>
+
+                        </tr>
+                        <tr>
+                            <td>egg</td>
+                            <td> 255</td>
+                            <td> 55 </td>
+                            <td class=text-center>
+                                <p class="fa fa-trash-o pr-2"></p>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
-                <div class="col-lg-6">
-                    <div class="footer-item">
-                        <i class="fa fa-sign-in" aria-hidden="true"></i>
-                        <a href="" class="text-white ml-3"> Login</a>
-                    </div>
-                    <div class="footer-item">
-                        <i class="fa fa-user-plus" aria-hidden="true"></i>
-                        <a href="" class="text-white ml-3">Sign Up</a>
+
+
+
+                <div class="container">
+                    <h6> LUNCH</h6>
+                    <table class="table table-bordered">
+                        <tr class="table-active">
+
+                            <th>Food</th>
+                            <th>Calories</th>
+                            <th>serving
+
+                            </th>
+                            <th class=text-center>Delete </th>
+
+                        </tr>
+                        <tr>
+                            <td>egg</td>
+                            <td> 255</td>
+                            <td> 55
+                            </td>
+                            <td class=text-center>
+                                <p class="fa fa-trash-o pr-2"></p>
+                        </tr>
+
+                    </table>
+
+
+                    <div class="container">
+                        <h6> DINNER</h6>
+                        <div class="col-md-6  col-sm-6"></div>
+                        <table class="table table-bordered">
+                            <tr class="table-active">
+                                <th>Food</th>
+                                <th>Calories</th>
+                                <th>serving
+                                </th>
+                                <th class=text-center>Delete </th>
+                            </tr>
+                            <tr>
+                                <td>egg</td>
+                                <td> 255</td>
+                                <td> 55
+                                </td>
+                                <td class=text-center>
+                                    <p class="fa fa-trash-o pr-2"></p>
+                            </tr>
+                        </table>
+                        </tr>
+                        </table>
+                        <button type="button" class="btn btn-dark" value="LOG FOOD" button-position="center">LOG FOOD</button>
                     </div>
 
-                    <div class="text-right">
-                        <i class="fab fa-facebook-square fa-2x pl-2" aria-hidden="true"></i>
-                        <i class="fab fa-linkedin fa-2x pl-2" aria-hidden="true"></i>
-                        <i class="fab fa-twitter-square fa-2x pl-2" aria-hidden="true"></i>
+                </div>
+            </div>
+            <div class="container">
+                <div class="col-md-6   col-sm-6">
+                    <h1 align="center">TODAY EXERCISE</h1>
+                    <div class="container">
+                        <table class="table table-bordered">
+
+                            <tr class="table-active">
+                                <th>Food</th>
+                                <th>Calories</th>
+                                <th class=text-center>Delete </th>
+                            </tr>
+
+                            <tr>
+
+                                <td>push-up</td>
+                                <td> 255</td>
+                                <td class=text-center>
+                                    <p class="fa fa-trash-o pr-2"></p>
+                                </td>
+
+                            </tr>
+
+
+                            <tr>
+
+
+                                <td>running</td>
+                                <td> 255</td>
+                                <td class=text-center>
+                                    <p class="fa fa-trash-o pr-2"></p>
+                                </td>
+
+                            </tr>
+                            <tr>
+                                <td>jummpin</td>
+                                <td> 255</td>
+                                <td class=text-center>
+                                    <p class="fa fa-trash-o pr-2"></p>
+                                </td>
+
+
+                            </tr>
+                            <tr>
+                                <td>egg</td>
+                                <td> 255</td>
+                                <td class=text-center>
+                                    <p class="fa fa-trash-o pr-2"></p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>egg</td>
+                                <td> 255</td>
+                                <td class=text-center>
+                                    <p class="fa fa-trash-o pr-2"></p>
+                                </td>
+                            </tr>
+
                     </div>
+                    </span>
+                    </table>
+                    <button type="button" class="btn btn-dark" value="LOG FOOD" button-position="center">LOG Exercise</button>
                 </div>
             </div>
 
-
-            <hr class="footer-hr">
-            <div class="text-center credits pb-2">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe blanditiis libero fuga fugiat minus necessitatibus expedita eligendi deleniti, enim itaque voluptate neque? Explicabo iure doloremque sequi accusantium! Dignissimos, mollitia alias!
-            </div>
-
-    </footer>
+        </div>
+    </div>
 </body>
+
+
+
 
 </html>
