--- a/Design/pages/exercise.html
+++ b/Design/pages/exercise.html
@@ -38,7 +38,7 @@
                                 <a class="nav-link" href="./Goals.html">Goals</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./food.html">Food</a>
+                                <a class="nav-link" href="./Exercise.html">Exercise</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./exercise.html">Exercise</a>
@@ -84,29 +84,29 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <th>Food 1</th>
+                            <th>Exercise 1</th>
                             <td>6</td>
                             <td>120</td>
                         </tr>
                         <tr>
-                            <th>Food 2</th>
+                            <th>Exercise 2</th>
                             <td>4</td>
                             <td>160</td>
                         </tr>
                         <tr>
-                            <th>Food 3</th>
+                            <th>Exercise 3</th>
                             <td>7.5</td>
                             <td>335</td>
                         </tr>
                         <tr>
-                            <th>Food 4</th>
+                            <th>Exercise 4</th>
                             <td>1.5</td>
                             <td>475</td>
                         </tr>
                     </tbody>
                 </table>
                 <div class="d-flex flex-row-reverse">
-                    <button class="btn btnn-primary ">Add food</button>
+                    <button class="btn btnn-primary ">Add Exercise</button>
                 </div>
 
             </div>
