--- a/Design/pages/Goal details.html
+++ b/Design/pages/Goal details.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../source/design.css">
 
     <script src="design.js"></script>
-    <title>Goal</title>
+    <title>Goal Details</title>
 
 </head>
 
@@ -73,41 +73,6 @@
         </div>
     </nav>
 
-    <section class="modal fade" id="editGoalModal" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">Edit Goal</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="container-fluid">
-                        <form>
-                            <div class="form-group row">
-                                <label class="col-form-label">Goal Weight (lbs)</label>
-                                <div class="col-lg-8">
-                                    <input type="number" class="form-control" value=96>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label class="col-form-label">Goal Date</label>
-                                <div class="col-lg-8">
-                                    <input type="date" class="form-control">
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btnn-primary">Save changes</button>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <section class="container">
         <div class="row p-3">
             <div class="col-lg-12 text-center">
@@ -141,11 +106,6 @@
                             <td class="text-right">0.5 lbs</td>
                         </tr>
                     </table>
-                    <div class="d-flex">
-                        <button class="btn btnn-primary">Add Goal</button>
-                        <button class="btn ml-auto btnn-primary" type="button" data-toggle="modal"
-                            data-target="#editGoalModal">Edit Goal</button>
-                    </div>
                 </div>
                 Log weight goes here
             </div>
@@ -153,133 +113,124 @@
         </div>
     </section>
     <br>
-    <br>
-    <section class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2>Previous Goals</h2>
-                <hr>
-            </div>
-        </div>
-        <div class="row p-3">
-            <div class="col-lg-6">
-                <div class="card card-body">
-                    <table class="table table-borderless">
-                        <thead>
-                            <tr>
-                                <th></th>
-                                <th>Start</th>
-                                <th>End</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Date</td>
-                                <td>23/2/19</td>
-                                <td>11/3/19</td>
-                            </tr>
-                            <tr>
-                                <td>Weight</td>
-                                <td>113 lbs</td>
-                                <td>97 lbs</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <div class="progress">
-                        <div class="progress-bar bg-danger" style="width:96% " role="progressbar" aria-valuemin="0"
-                            aria-valuemax="100" aria-valuenow="96">96%</div>
-                    </div>
 
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="card card-body">
-                    <table class="table table-borderless">
-                        <thead>
-                            <tr>
-                                <th></th>
-                                <th>Start</th>
-                                <th>End</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Date</td>
-                                <td>23/2/19</td>
-                                <td>11/3/19</td>
-                            </tr>
-                            <tr>
-                                <td>Weight</td>
-                                <td>113 lbs</td>
-                                <td>97 lbs</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <div class="progress">
-                        <div class="progress-bar bg-danger" style="width:96% " role="progressbar" aria-valuemin="0"
-                            aria-valuemax="100" aria-valuenow="96">96%</div>
-                    </div>
-                </div>
+    <section class="container">
+        <hr class="divider">
+        <div class='row pt-4 text-center'>
+            <div class="col-lg-12">
+                <h2>Food Log <i class="fa fa-pizza-slice"></i></h2>
             </div>
         </div>
-        <div class="row p-3">
-            <div class="col-lg-6">
-                <div class="card card-body">
-                    <table class="table table-borderless">
-                        <thead>
-                            <tr>
-                                <th></th>
-                                <th>Start</th>
-                                <th>End</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Date</td>
-                                <td>23/2/19</td>
-                                <td>11/3/19</td>
-                            </tr>
-                            <tr>
-                                <td>Weight</td>
-                                <td>113 lbs</td>
-                                <td>97 lbs</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <div class="progress">
-                        <div class="progress-bar bg-danger" style="width:96% " role="progressbar" aria-valuemin="0"
-                            aria-valuemax="100" aria-valuenow="96">96%</div>
-                    </div>
-                </div>
+        <div class="row pt-3 justify-content-md-center">
+            <div class="col-md-4 mb-2">
+                <input type="date" class="form-control">
             </div>
-            <div class="col-lg-6">
-                <div class="card card-body">
-                    <table class="table table-borderless">
-                        <thead>
+            <div class="col-lg-12">
+                <table class="table">
+                    <thead class="labels text-white">
+                        <tr>
+                            <th>Food</th>
+                            <th>Qty</th>
+                            <th>Calories</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <thead class="log-thead">
                             <tr>
-                                <th></th>
-                                <th>Start</th>
-                                <th>End</th>
+                                <th colspan="3" class="">Breakfast</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tr>
+                            <th>Food 1</th>
+                            <td>6</td>
+                            <td>120</td>
+                        </tr>
+                        <tr>
+                            <th>Food 2</th>
+                            <td>4</td>
+                            <td>160</td>
+                        </tr>
+                        <thead class="log-thead">
                             <tr>
-                                <td>Date</td>
-                                <td>23/2/19</td>
-                                <td>11/3/19</td>
+                                <th colspan="3" class="">Lunch</th>
                             </tr>
+                        </thead>
+                        <tr>
+                            <th>Food 3</th>
+                            <td>7.5</td>
+                            <td>335</td>
+                        </tr>
+                        <tr>
+                            <th>Food 4</th>
+                            <td>1.5</td>
+                            <td>475</td>
+                        </tr>
+                        <thead class="log-thead">
                             <tr>
-                                <td>Weight</td>
-                                <td>113 lbs</td>
-                                <td>97 lbs</td>
+                                <th colspan="3" class="">Dinner</th>
                             </tr>
-                        </tbody>
-                    </table>
-                    <div class="progress">
-                        <div class="progress-bar bg-danger" style="width:96% " role="progressbar" aria-valuemin="0"
-                            aria-valuemax="100" aria-valuenow="96">96%</div>
-                    </div>
-                </div>
+                        </thead>
+                        <tr>
+                            <th>Food 3</th>
+                            <td>7.5</td>
+                            <td>335</td>
+                        </tr>
+                        <tr>
+                            <th>Food 4</th>
+                            <td>1.5</td>
+                            <td>475</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+            </div>
+        </div>
+    </section>
+    <br>
+    <section class="container mb-2">
+        <hr class="divider">
+        <div class='row pt-4 text-center'>
+            <div class="col-lg-12">
+                <h2>Exercise Log <i class="fa fa-running"></i> </h2>
+            </div>
+        </div>
+        <div class="row pt-3 justify-content-md-center">
+            <div class="col-md-4 mb-2">
+                <input type="date" class="form-control">
+            </div>
+            <div class="col-lg-12">
+                <table class="table">
+                    <thead class="labels text-white">
+                        <tr>
+                            <th>Exercise</th>
+                            <th>Amount</th>
+                            <th>Calories</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>Exercise 1</th>
+                            <td>6</td>
+                            <td>120</td>
+                        </tr>
+                        <tr>
+                            <th>Exercise 2</th>
+                            <td>4</td>
+                            <td>160</td>
+                        </tr>
+                        <tr>
+                            <th>Exercise 3</th>
+                            <td>7.5</td>
+                            <td>335</td>
+                        </tr>
+                        <tr>
+                            <th>Exercise 4</th>
+                            <td>1.5</td>
+                            <td>475</td>
+                        </tr>
+                    </tbody>
+                </table>
+
             </div>
         </div>
     </section>
