--- a/Design/pages/Goal details.html
+++ b/Design/pages/Goal details.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/87ad30c39c.js"></script>
-    <link rel="stylesheet" href="../source/design.css">
+
 
     <script src="design.js"></script>
     <title>Goal Details</title>
@@ -69,6 +69,14 @@
             <div class="col-lg-12 text-center">
                 <h2>Goal Details</h2>
             </div>
+            <div class="dropdown">
+                <input type="search" id="searchBar" class="form-control dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <div class="dropdown-menu" aria-labelledby="searchBar">
+
+                </div>
+            </div>
+
+
         </div>
         <div class="row p-3">
             <div class="col-lg-4 pt-3">
@@ -277,6 +285,29 @@
             </div>
 
     </footer>
+
+    <script>
+        $(function() {
+            $.get('https://api.edamam.com/api/food-database/parser?category=generic-foods&ingr=eggs&app_id=d15954a8&app_key=853be5bff9bae2b36c49b362524e0404', function(data) {
+                console.log(data.hints)
+            })
+        })
+
+        $("#searchBar").change(function(event) {
+            searchBar = $(this)
+            searchBar.dropdown('hide')
+            var query = searchBar.val()
+            console.log(query)
+            for (var i = 0; i < 20; i++) {
+                console.log("I am called " + i + " times")
+
+                /*$.get('https://api.edamam.com/api/food-database/parser?category=generic-foods&ingr=' + query + '&app_id=d15954a8&app_key=853be5bff9bae2b36c49b362524e0404', function(data) {
+                    console.log(data.hints)
+                })*/
+            }
+
+        })
+    </script>
 </body>
 
 </html>
