--- a/Design/pages/Home.html
+++ b/Design/pages/Home.html
@@ -526,8 +526,10 @@
     $(function(){
         // get data from server url: http://localhost:8000/food-log/2019-07-16
 
-        $.get("http://localhost:8000/summary",(data)=>{
+        $.get("http://localhost:8000/exercise-log",(data)=>{
             console.log(data)
+            
+
         })
 
 
