--- a/Design/pages/Home.html
+++ b/Design/pages/Home.html
@@ -24,7 +24,6 @@
 
 
 <body>
-    <<<<<<< HEAD=======>>>>>>> f82f92ffa641a66d3e3bdec5b65b329137702cb0
         <!--Navbar start-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
@@ -538,6 +537,16 @@
         for (log of data) {
             if (log.mealType === 'Lunch') {
                 lu_log.after(`<tr><td>${log.foodId}</td><td>${log.qty}</td><td>${log.calories}</td><td class="text-center"><p class="fa fa-trash-o pr-2 text-center"></p></td></tr>`)
+            }
+        }
+        for (log of data) {
+            if (log.mealType === 'Breakfast') {
+                bf_log.after(`<tr><td>${log.foodId}</td><td>${log.qty}</td><td>${log.calories}</td><td class="text-center"><p class="fa fa-trash-o pr-2 text-center"></p></td></tr>`)
+            }
+        }
+        for (log of data) {
+            if (log.mealType === 'Dinner') {
+                di_log.after(`<tr><td>${log.foodId}</td><td>${log.qty}</td><td>${log.calories}</td><td class="text-center"><p class="fa fa-trash-o pr-2 text-center"></p></td></tr>`)
             }
         }
     })
